--- a/Homework_Matplotlib.ipynb
+++ b/Homework_Matplotlib.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -322,108 +322,27 @@
        "      <td>32.997729</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1888</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>25</td>\n",
-       "      <td>63.145652</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1889</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>30</td>\n",
-       "      <td>65.841013</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1890</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>35</td>\n",
-       "      <td>69.176246</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1891</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>40</td>\n",
-       "      <td>70.314904</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1892</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>45</td>\n",
-       "      <td>73.867845</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1880 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Mouse ID Drug Regimen   Sex  Age_months  Weight (g)  Timepoint  \\\n",
-       "0        k403     Ramicane  Male          21          16          0   \n",
-       "1        k403     Ramicane  Male          21          16          5   \n",
-       "2        k403     Ramicane  Male          21          16         10   \n",
-       "3        k403     Ramicane  Male          21          16         15   \n",
-       "4        k403     Ramicane  Male          21          16         20   \n",
-       "...       ...          ...   ...         ...         ...        ...   \n",
-       "1888     z969     Naftisol  Male           9          30         25   \n",
-       "1889     z969     Naftisol  Male           9          30         30   \n",
-       "1890     z969     Naftisol  Male           9          30         35   \n",
-       "1891     z969     Naftisol  Male           9          30         40   \n",
-       "1892     z969     Naftisol  Male           9          30         45   \n",
+       "  Mouse ID Drug Regimen   Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "0     k403     Ramicane  Male          21          16          0   \n",
+       "1     k403     Ramicane  Male          21          16          5   \n",
+       "2     k403     Ramicane  Male          21          16         10   \n",
+       "3     k403     Ramicane  Male          21          16         15   \n",
+       "4     k403     Ramicane  Male          21          16         20   \n",
        "\n",
-       "      Tumor Volume (mm3)  Metastatic Sites  \n",
-       "0              45.000000                 0  \n",
-       "1              38.825898                 0  \n",
-       "2              35.014271                 1  \n",
-       "3              34.223992                 1  \n",
-       "4              32.997729                 1  \n",
-       "...                  ...               ...  \n",
-       "1888           63.145652                 2  \n",
-       "1889           65.841013                 3  \n",
-       "1890           69.176246                 4  \n",
-       "1891           70.314904                 4  \n",
-       "1892           73.867845                 4  \n",
-       "\n",
-       "[1880 rows x 8 columns]"
+       "   Tumor Volume (mm3)  Metastatic Sites  \n",
+       "0           45.000000                 0  \n",
+       "1           38.825898                 0  \n",
+       "2           35.014271                 1  \n",
+       "3           34.223992                 1  \n",
+       "4           32.997729                 1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +350,7 @@
    "source": [
     "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n",
     "Final_df = combined_data_df.loc[combined_data_df[\"Mouse ID\"]!='g989']\n",
-    "Final_df"
+    "Final_df.head()"
    ]
   },
   {
